# ComfyUI-Gaffer

./: README.md  __init__.py  iclight.py  pyproject.toml
examples/: workflow-gaffer-grayscaler-compare.json  workflow-gaffer-iclight-all.json  workflow-gaffer-iclight-fbc.json  workflow-gaffer-iclight-fc-animated.json  workflow-gaffer-iclight-fc-normal.json  workflow-gaffer-iclight-fc-text.json  workflow-gaffer-iclight-fc.json
utils/: image.py  patches.py
